# UACSforOrbiterLinux

Sources/: BaseCommon.h  CMakeLists.txt
Sources/API/: Astronaut.cpp  Astronaut.h  CMakeLists.txt  Cargo.cpp  Cargo.h  Common.h  Module.cpp  Module.h
Sources/Core/: Astronaut.cpp  Astronaut.h  CMakeLists.txt  Cargo.h  Module.cpp  Module.h
Sources/Vessels/: CMakeLists.txt
Sources/Vessels/Astronaut/: Astronaut.cpp  Astronaut.h  CMakeLists.txt
Sources/Vessels/Cargo/: CMakeLists.txt  Cargo.cpp  Cargo.h
Sources/Vessels/Carrier/: CMakeLists.txt  Carrier.cpp  Carrier.h
Sources/Vessels/LampCargo/: CMakeLists.txt  LampCargo.cpp  LampCargo.h
Sources/Vessels/LampsCargo/: CMakeLists.txt  LampsCargo.cpp  LampsCargo.h
